# user-service

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  config.py  consul_registration.py
app/clients/: persistence_client.py
app/config/: settings.py
app/controllers/: __init__.py  auth_controller.py  user_controller.py
app/middleware/: __init__.py
app/models/: __init__.py
app/routes/: users.py
app/schemas/: __init__.py
app/security/: jwt_handler.py
app/services/: __init__.py  user_service.py
app/utils/: errors.py
scripts/: build.sh  dev.sh  run.sh  stop.sh
tests/: conftest.py
tests/contract/: test_users_api.py
tests/unit/: test_errors.py  test_user_service.py
